2009-08-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Better support for function calls on MT Alpha.

	* tools/bin/spp: Support more branch forms in `rewritejsr'. Be
	more careful when "eating" instructions before `end'. Force a read
	to RV/FRV after the function call so that the memory load is
	guaranteed to complete before the register is reused.

2009-08-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor cosmetics in MT Alpha codegen
	
	* tools/bin/spp: Change messages in comments and assembly
	formatting.

2009-08-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	MT Alpha codegen optimization and fixes.

	* tools/bin/spp: Run `rewritejsr' before renaming specials. This
	requires to re-run `markused' after `rewritejsr' so that the
	renaming of specials can pick up any new use of RA or PV
	introduced by `rewritejsr'.  Also re-run `munchret' after
	`rewritejsr' so that extra loads before `end' can be optimized
	away.
	
2009-08-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More MT Alpha code optimizations.
	
	* tools/bin/spp: Avoid using the legacy PV to pass thread
	arguments, by aliasing the legacy PV reg number to the top of the
	local register window. Re-enable renaming of PV.

2009-08-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More tests for function calls.

	* tools/include/svp/compiler.h: Define `noinline'.

	* tools/tests/8_funs/f1.c,
	* tools/tests/8_funs/f2.c,
	* tools/tests/8_funs/f3.c,
	* tools/tests/8_funs/f4.c,
	* tools/tests/8_funs/f5.c,
	* tools/tests/8_funs/f6.c,
	* tools/tests/8_funs/f7.c,
	* tools/tests/8_funs/f8.c,
	* tools/tests/8_funs/f9.c: Simplify.
	* tools/tests/8_funs/bigret.c: New.

	* lib/tests/malloc/m3.c: New.

2009-08-22  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Reduce distribution archive size.

	* programs/benchmarks/fft/Makefile.am: Do not distribute
	sine/cosine table data. Let it be generated at build time.

2009-08-22  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Simplify interface to memory allocation.
